feat: Implement Observer pattern for game elements and update game controller structure